# tmp

./: .gitignore  README.md  README.org  SUMMARY.md  _issue.org  config.json  config_based_scraper.py  configurable_scraper.py  debug_cleaned.html  debug_page.html  debug_page_1.html  debug_scraper.py  dentists.csv  dentists.json  doctolib_doctors.csv  doctolib_doctors.json  doctolib_schema.json  doctolib_scraper.py  doctors_mock_ratings.csv  doctors_mock_ratings.json  example_usage.py  final_doctolib_scraper.py  guix-env.sh  improved_doctolib_doctors.csv  improved_doctolib_doctors.json  improved_scraper.py  llm_doctolib_scraper.py  manifest.scm  ollama_doctolib_scraper.py  ollama_doctors.csv  ollama_doctors.json  pyproject.toml  quick_ollama_demo.py  requirements.txt  schema_generator_example.py  setup.py  test.py  test_comprehensive_ratings.py  test_doctors.csv  test_doctors.json  (+6 more)
