[project]
name = ""
version = ""
description = ""
authors = [
    {name = "dev", email = "dev@gmail.com"},
]
dependencies = [
    "ipython",
    "pandas",
    "trepan3k",
    "pytest>=7.1.3",
]
requires-python = "==3.7.*"
license = {text = "MIT"}
[project.optional-dependencies]


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
