[project]
name = ""
version = ""
description = ""
authors = [
    {name = "dev", email = "dev@gmail.com"},
]
dependencies = [
    "pandas",
]
requires-python = "==3.10.*"
license = {text = "MIT"}
[project.optional-dependencies]


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "jupyter",
    "trepan3k",
    "ipython",
    "pytest>=7.1.3",
]
